tests/src/frontend/syntax/invalid/overflow_literal.sk
fun main(): String {
  (1000000000000000000000000000000000000000000000000000000000000000).toString()
}
